cupt (0.5.1) UNRELEASED; urgency=medium

  * cupt:
    - Exit immediately when nothing to do (for management actions).
      Thanks to Didier 'OdyX' Raboud.
  * Cupt:
    - Config:
      - 'set_regular_var': fixed recognizing the value 'false' as false.
        Thanks to Michael Stapelberg. (Closes: #539730)
    - Cache:
      - Package:
        - Fixed a crash when merging two source versions with equal version
          strings. Thanks to Michael Stapelberg.
      - 'policy_version': don't assume that package contains valid versions,
        pre-check it. Thanks to Didier 'OdyX' Raboud.
      - 'get_original_apt_pin': consider only first successful pin match, as
        declared in apt_preferences(5). Thanks to Didier 'OdyX' Raboud.
    - System:
      - Worker:
        - While building dependency graph, also count Conflicts/Breaks that
          belong to packages going to be removed/purged. The urgency is set to
          'medium' because of this fix. Thanks to Michael Stapelberg.
          (Closes: #539729)
    - Download:
      - Methods/File:
        - Support 'copy' scheme, and do full copying only for it. For 'file'
          scheme do only symlinking. Thanks to Michael Stapelberg.
          (Closes: #539733)

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Mon, 03 Aug 2009 12:26:47 +0300

cupt (0.5.0) unstable; urgency=low

  * cupt:
    - Fixed a regression since 0.4.0 when trying to 'remove' non-installed
      packages (for insuring that they won't be installed).
    - New 'shell' subcommand.
  * Cupt:
    - System:
      - Worker:
        - 'update_release_and_index_data': always delete possible partial
          chunks of Release files and their gpg signatures before downloads.
        - don't even attempt to "eat" the action dependencies
          that were originated by Conflicts/Breaks, doing this could break
          action sequence order. Thanks to Cyril Brulebois. (Closes: #539256)
    - Cache: